# Day04

./: .gitignore
ex03/: CMakeLists.txt  README.MD  input
ex03/aux/: input
ex03/src/: ex03.cpp
ex04/src/: main.cpp
ex05/: CMakeLists.txt
ex05/src/: CMakeLists.txt  main.cpp
ex06/src/: CMakeLists.txt  main.cpp
ex07/src/: main.cpp
ex11/: README.MD
ex11/aux/: 2includes.h  include1.h  include2.h  no_includes.txt
ex11/src/: CMakeLists.txt  getRootDir.cpp  main.cpp  replaceIncludes.cpp  replaceIncludes.h  replaceIncludesFilePath.cpp
ex12/: .SublProjTest.sublime-project  CMakeLists.txt
ex12/GetSecretMsgLib/: CMakeLists.txt
ex12/GetSecretMsgLib/includes/: getSecretMsg.h  getSecretMsgStr.h
ex12/GetSecretMsgLib/src/: getFileSize.cpp  getFirstByte.cpp  getMessageLength.cpp  getOffsets.cpp  getSecretMsg.cpp  getSecretMsgStr.cpp
ex12/GetSecretMsgTest/: CMakeLists.txt
ex12/GetSecretMsgTest/src/: main.cpp
ex12/src/: main.cpp
ex12/src/GetSecretMsg/: getFileSize.cpp  getFirstByte.cpp  getMessageLength.cpp  getSecretMsgStr.cpp
ex13/: CMakeLists.txt
ex13/aux/: out
ex13/src/: CMakeLists.txt  SecretCodifierModel.cpp  SecretMsgGenerator.h  main.cpp  writeCodifiedText.cpp
ex14/: run.sh
ex14/includes/BMPTools/: BMPGrayscaleImg.hpp  BMPHeader.h  BMPInfoHeader.h  Utils.h
ex14/includes/MinstTools/: MinstImgDataSet.hpp  MinstLabelDataSet.hpp  MinstToolsExceptions.h
ex14/src/: CMakeLists.txt  main.cpp
ex14/src/BMPToolsLib/: BMPGrayscaleImg.cpp  CMakeLists.txt  Utils.cpp
ex14/src/Exe/: CMakeLists.txt  main.cpp
ex14/src/MinstToolsLib/: CMakeLists.txt  MinstImgDataSet.cpp  MinstLabelDataSet.cpp  Utils.cpp  Utils.h
